Working Emulator with docker

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   android-dev:
     build: .
@@ -11,7 +9,7 @@ services:
       - PATH=/opt/android-sdk/cmdline-tools/latest/bin:/opt/android-sdk/platform-tools:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
       - QT_X11_NO_MITSHM=1
       - NO_AT_BRIDGE=1
-      - _JAVA_OPTIONS='-XX:+IgnoreUnrecognizedVMOptions --add-modules java.se.ee'
+      - _JAVA_OPTIONS='-Xmx2g'
     devices:
       - /dev/kvm
     cap_add:
@@ -22,14 +20,14 @@ services:
     ports:
       - "5554-5555:5554-5555"  # ADB ports
       - "4723:4723"            # Appium port
-      - "5900-5901:5900-5901"  # VNC ports
+      - "5900:5900"            # VNC port
     volumes:
       - ./:/app
-      - android_sdk:/opt/android-sdk
+      - android_data:/root/.android
       - /tmp/.X11-unix:/tmp/.X11-unix
     working_dir: /app
     tty: true
     stdin_open: true
 
 volumes:
-  android_sdk:
+  android_data:
