--- a/package.json
+++ b/package.json
@@ -1,13 +1,20 @@
 {
   "name": "emulatorInstaBot",
   "type": "module",
+  "scripts": {
+    "test": "npx wdio run wdio.conf.ts"
+  },
   "devDependencies": {
+    "@types/node": "^20.0.0",
     "@wdio/cli": "^9.15.0",
+    "@wdio/globals": "^9.15.0",
     "@wdio/local-runner": "^9.15.0",
     "@wdio/mocha-framework": "^9.15.0",
     "@wdio/spec-reporter": "^9.15.0",
     "@wdio/visual-service": "^8.0.4",
-    "appium-uiautomator2-driver": "^4.2.3"
+    "appium-uiautomator2-driver": "^4.2.3",
+    "ts-node": "^10.9.0",
+    "typescript": "^5.0.0"
   },
   "dependencies": {
     "dotenv": "^16.5.0",
